sample/retrieveUnpackaged/objects/Schedule_Item__c.object
<CustomObject>
    <fields>
        <fullName>DOO__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Treatment_Plant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Treatment Plant</label>
        <referenceTo>Treatment_Plant__c</referenceTo>
        <relationshipName>Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Schedule Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Treatment_Plant__c</columns>
        <columns>DOO__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>MM_Queue</fullName>
        <columns>NAME</columns>
        <columns>DOO__c</columns>
        <columns>Treatment_Plant__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Status__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Treatment_Plant__c</field>
            <operation>equals</operation>
            <value>Mt Martha</value>
        </filters>
        <label>Mt Martha Queue</label>
        <queue>Mt_Martha_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Schedule Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Schedule Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>